# friction

./: .gitignore  CMakeLists.txt  README.md  annotated_dup.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  docs.md  fpm.toml  functions_vars.html  hierarchy.html  hierarchy.js  index.html  namespacefriction.js  namespaces.html  namespaces_dup.js  navtreeindex0.js  search.html  structfriction_1_1coulomb__model-members.html  structfriction_1_1friction__model.js  structfriction_1_1lugre__model-members.html  structfriction_1_1lugre__model.js
.github/workflows/: cmake.yml  doc-deployment.yml  doxygen-gh-pages.yml  fpm.yml
configure/: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/diffeq/: CMakeLists.txt
dependencies/ferror/: CMakeLists.txt
dependencies/fitpack/: CMakeLists.txt
dependencies/fstats/: CMakeLists.txt
doc/: index.html
doc/interface/: friction_logical_query.html
doc/lists/: files.html  modules.html  procedures.html
doc/module/: friction.html  friction_core.html  friction_coulomb.html  friction_maxwell.html
doc/sourcefile/: friction.f90.html  friction_core.f90.html  friction_coulomb.f90.html  friction_gmsm.f90.html  friction_lugre.f90.html  friction_maxwell.f90.html  friction_stribeck.f90.html
doc/src/: friction.f90  friction_coulomb.f90  friction_errors.f90  friction_maxwell.f90  friction_modified_stribeck.f90
doc/tipuesearch/: tipuesearch_content.js
doc/type/: friction_model.html  generalized_maxwell_slip_model.html  lugre_model.html  maxwell_model.html  stribeck_model.html
docs/: Doxyfile
docs/html/: annotated.html  classes.html  files.html  friction_8f90_source.html  friction__coulomb_8f90_source.html  friction__lugre_8f90_source.html  functions.html  functions_func.html  index.html  interfacefriction_1_1friction__evaluation-members.html  interfacefriction_1_1friction__evaluation.html  interfacefriction_1_1friction__logical__query-members.html  interfacefriction_1_1friction__logical__query.html  menudata.js  namespacefriction.html  navtreedata.js  structfriction_1_1coulomb__model.html  structfriction_1_1coulomb__model.js  structfriction_1_1friction__model-members.html  structfriction_1_1friction__model.html  structfriction_1_1lugre__model.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  classes_0.js  classes_1.js  functions_2.js  variables_2.js  variables_3.js  variables_4.js
examples/: CMakeLists.txt  coulomb_example.f90  coulomb_fit_example.f90  gmsm_fit_example.f90  lugre_example.f90  lugre_fit_example.f90  maxwell_example.f90  maxwell_fit_example.f90  modified_stribeck_example.f90  modified_stribeck_fit_example.f90  stribeck_example.f90
examples/fortran_csv_module/: CMakeLists.txt
examples/fplot/: CMakeLists.txt
install/: frictionConfig.cmake.in  template.pc
interface/: fitpack_curve.html  fitpack_surface.html  friction_evaluation.html  friction_integer_query.html  friction_model_from_array.html  friction_model_to_array.html  friction_state_model.html
lists/: files.html  modules.html  types.html
module/: fitpack.html  fitpack_core.html  friction.html  friction_coulomb.html  friction_errors.html  friction_fitting.html  friction_gmsm.html  friction_lugre.html  friction_maxwell.html  friction_modified_stribeck.html  friction_stribeck.html
proc/: bispeu.html  bispev.html  clocur.html  cocosp.html  concon.html  concur.html  cualde.html  curev.html  curfit.html  dblint.html  evapol.html  fitpack_message.html  fitpack_success.html  fourco.html  insert.html  insert_inplace.html  parcur.html  parder.html  pardeu.html  pardtc.html  parsur.html  percur.html  pogrid.html  polar.html  profil.html  regrid.html  spalde.html  spgrid.html  sphere.html  splder.html  splev.html  splint.html  sproot.html  surev.html  surfit.html
sandbox/: maxwell.m  modified_maxwell.m  modified_stribeck.m
search/: all_3.js  all_5.js  namespaces_0.js  searchdata.js  variables_0.js
sourcefile/: fitpack.f90.html  friction.f90.html  friction_coulomb.f90.html  friction_errors.f90.html  friction_fitting.f90.html  friction_gmsm.f90.html  friction_lugre.f90.html  friction_maxwell.f90.html  friction_modified_stribeck.f90.html  friction_stribeck.f90.html
src/: CMakeLists.txt  friction.f90  friction_core.f90  friction_coulomb.f90  friction_fitting.f90  friction_gmsm.f90  friction_lugre.f90  friction_maxwell.f90  friction_model_routines.f90  friction_modified_stribeck.f90  friction_stribeck.f90
src/fitpack/: fitpack.f90  fitpack_core.f90
test/: CMakeLists.txt  friction_model_tests.f90  friction_test.f90
tipuesearch/: tipuesearch_content.js
type/: coulomb_model.html  fitpack_curve.html  fitpack_surface.html  friction_model.html  generalized_maxwell_slip_model.html  lugre_model.html  maxwell_model.html  modified_stribeck_model.html  stribeck_model.html
